Fixing backface visibility issue on form submit flip

--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -394,7 +394,7 @@ footer {
       height: auto;
     }
 
-    .form-success, .input-group {
+    .form-success, form {
       backface-visibility: hidden;
 
       .btn, .form-control {
